fix: overflow, almost finish

--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 
 /* About */
 
+
+
 #about-img {
     background-color: palegoldenrod !important;
 }
@@ -57,6 +59,22 @@
 
 .progress {
     height: 20px;
+}
+
+#progress-bar1 {
+    width: 80%;
+}
+
+#progress-bar2 {
+    width: 80%;
+}
+
+#progress-bar3 {
+    width: 50%;
+}
+
+#progress-bar4 {
+    width: 50%;
 }
 
 /* Contacts */
